--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,96 +1,81 @@
+/**
+ * Resets
+ * ======
+ */
 * {
-    box-sizing: border-box;
-}
+  box-sizing: border-box; }
+
+/**
+ * Helpers
+ * =======
+ */
+.naked-list {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+/**
+ * Header
+ * ======
+ */
+.global-header {
+  background: #222;
+  padding: 50px 0;
+  text-align: center;
+  color: #fff; }
+  .global-header h1 {
+    margin: 0;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    font-weight: 100;
+    text-rendering: optimizeLegibility; }
+  .global-header p {
+    margin: 20px 0 0;
+    font-weight: 300;
+    font-size: 14px;
+    font-style: italic;
+    color: #ccc;
+    text-rendering: optimizeLegibility; }
+
+/**
+ * Confessions
+ * ===========
+ */
+.confession {
+  margin-bottom: 100px; }
+  .confession__list {
+    margin: 100px auto 0;
+    max-width: 66.666%; }
+  .confession h2 {
+    float: left;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    text-rendering: optimizeLegibility;
+    margin-left: 20px;
+    width: calc(100% - 120px); }
+  .confession audio {
+    width: calc(100% - 120px);
+    margin-left: 20px; }
+
+.confession-controls {
+  float: left;
+  width: 100px;
+  text-align: center;
+  border-right: 1px solid #eee;
+  padding-right: 20px; }
+  .confession-controls__count {
+    padding: 10px 0;
+    font-weight: 500; }
+  .confession-controls__button {
+    border: none;
+    background: #eee;
+    width: 100%;
+    padding: 10px 5px;
+    text-transform: uppercase;
+    font-size: 10px;
+    font-weight: 500; }
 
 body {
-    background: #333 no-repeat top center / cover;
-    font-family: 'Merriweather', serif;
-}
-
-.global-wrapper {
-    max-width: 500px;
-    margin: 0 auto;
-}
-
-header {
-    font-size: 28px;
-    text-align: center;
-    color: #666;
-    text-shadow: 0 -1px 0 #000;
-    margin: 0 0 100px;
-}
-
-header p {
-    font-size: 16px;
-    font-variant: small-caps;
-}
-
-h1 {
-    font-size: 48px;
-    font-weight: normal;
-    margin: 100px 0 0;
-}
-
-ul {
-    list-style: none;
-    margin: 0 0 100px;
-    padding: 0;
-    float: left;
-    width: 100%;
-}
-
-li {
-    float: left;
-    width: 100%;
-    padding: 20px;
-    border-top: 1px solid #222;
-    border-bottom: 1px solid #444;
-}
-
-li:first-child {
-    border-top: none;
-}
-
-li:last-child {
-    border-bottom: none;
-}
-
-audio {
-    width: 100%;
-}
-
-.votes {
-    font-size: 10px;
-    text-transform: uppercase;
-    color: #ccc;
-    float: left;
-    width: 100%;
-}
-
-.votes p {
-    float: left;
-    padding: 10px 0;
-    margin: 0;
-}
-
-button {
-    float: right;
-    border: none;
-    background: #000;
-    padding: 10px 20px;
-    border-radius: 2px;
-    border-bottom: 1px solid #222;
-    transition: ease 250ms;
-}
-
-button:focus {
-    outline: none;
-}
-
-button:hover {
-    background: #111;
-}
-
-button:active {
-    background: #444;
-}
+  font-family: 'Lato';
+  font-weight: 100; }
