--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -55,6 +55,7 @@
     margin-left: 20px;
     width: calc(100% - 120px); }
   .confession audio {
+    float: left;
     width: calc(100% - 120px);
     margin-left: 20px; }
 
