--- a/assets/scss/modules/_confessions.scss
+++ b/assets/scss/modules/_confessions.scss
@@ -5,7 +5,7 @@
 
 .confession {
 
-    float: left;
+    display: table;
     width: 100%;
     margin-bottom: 100px;
 
@@ -14,27 +14,22 @@
         max-width: 66.666%;
     }
 
-    h2 {
-        float: left;
-        font-size: 16px;
-        text-transform: uppercase;
-        letter-spacing: 0.05em;
-        text-rendering: optimizeLegibility;
-        margin-left: 20px;
-        width: calc(100% - 120px);
-    }
-
     audio {
-        float: left;
-        width: calc(100% - 120px);
-        margin-left: 20px;
+        width: 100%;
+        padding-left: 20px;
     }
 
 }
 
+.confession-audio {
+    display: table-cell;
+    vertical-align: middle;
+}
+
 .confession-controls {
 
-    float: left;
+    display: table-cell;
+    vertical-align: middle;
     width: 100px;
     text-align: center;
     border-right: 1px solid #eee;
@@ -43,16 +38,38 @@
     &__count {
         padding: 10px 0;
         font-weight: 500;
+        border-left: 1px solid #eee;
+        border-right: 1px solid #eee;
     }
 
     &__button {
+
         border: none;
         background: #eee;
+        color: #333;
         width: 100%;
         padding: 10px 5px;
         text-transform: uppercase;
         font-size: 10px;
         font-weight: 500;
+        transition: ease 100ms;
+
+        &--forgive:hover,
+        &--forgive:focus {
+            color: green;
+        }
+
+        &--condemn:hover,
+        &--condemn:focus {
+            color: red;
+        }
+
+        &:disabled,
+        &:disabled:hover,
+        &:disabled:focus {
+            color: #ccc;
+        }
+
     }
 
 }
