--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -42,42 +42,48 @@
  * ===========
  */
 .confession {
-  float: left;
+  display: table;
   width: 100%;
   margin-bottom: 100px; }
   .confession__list {
     margin: 100px auto 0;
     max-width: 66.666%; }
-  .confession h2 {
-    float: left;
-    font-size: 16px;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-    text-rendering: optimizeLegibility;
-    margin-left: 20px;
-    width: calc(100% - 120px); }
   .confession audio {
-    float: left;
-    width: calc(100% - 120px);
-    margin-left: 20px; }
+    width: 100%;
+    padding-left: 20px; }
+
+.confession-audio {
+  display: table-cell;
+  vertical-align: middle; }
 
 .confession-controls {
-  float: left;
+  display: table-cell;
+  vertical-align: middle;
   width: 100px;
   text-align: center;
   border-right: 1px solid #eee;
   padding-right: 20px; }
   .confession-controls__count {
     padding: 10px 0;
-    font-weight: 500; }
+    font-weight: 500;
+    border-left: 1px solid #eee;
+    border-right: 1px solid #eee; }
   .confession-controls__button {
     border: none;
     background: #eee;
+    color: #333;
     width: 100%;
     padding: 10px 5px;
     text-transform: uppercase;
     font-size: 10px;
-    font-weight: 500; }
+    font-weight: 500;
+    transition: ease 100ms; }
+    .confession-controls__button--forgive:hover, .confession-controls__button--forgive:focus {
+      color: green; }
+    .confession-controls__button--condemn:hover, .confession-controls__button--condemn:focus {
+      color: red; }
+    .confession-controls__button:disabled, .confession-controls__button:disabled:hover, .confession-controls__button:disabled:focus {
+      color: #ccc; }
 
 body {
   font-family: 'Lato';
