--- a/views/partials/confession.ejs
+++ b/views/partials/confession.ejs
@@ -1,12 +1,19 @@
-<article class="confession" data-votes="<%= recording.votes %>">
+<article class="confession">
     <div class="confession-controls">
-        <button class="confession-controls__button confession-controls__button--forgive js-upvote">Forgive</button>
+        <button
+            class="confession-controls__button confession-controls__button--forgive js-upvote js-vote"
+            data-confession-id="<%= recording.id %>"
+        >Forgive</button>
         <div class="confession-controls__count js-vote-count"><%= recording.votes %></div>
-        <button class="confession-controls__button confession-controls__button--condemn js-downvote">Condemn</button>
+        <button
+            class="confession-controls__button confession-controls__button--condemn js-downvote js-vote"
+            data-confession-id="<%= recording.id %>"
+        >Condemn</button>
     </div>
-    <h2>Confession #00<%= recording.id %></h2>
-    <audio
-        src="<%= recording.recording_url %>.mp3"
-        controls="controls"
-    ></audio>
+    <div class="confession-audio">
+        <audio
+            src="<%= recording.recording_url %>.mp3"
+            controls="controls"
+        ></audio>
+    </div>
 </article>
