--- a/assets/scss/modules/_header.scss
+++ b/assets/scss/modules/_header.scss
@@ -6,7 +6,7 @@
 .global-header {
 
     background: #222;
-    padding: 50px 0;
+    padding: 50px;
     text-align: center;
     color: #fff;
 
@@ -25,6 +25,13 @@
         font-style: italic;
         color: #ccc;
         text-rendering: optimizeLegibility;
+    }
+
+    a,
+    a:hover,
+    a:focus {
+        color: #fff;
+        text-decoration: none;
     }
 
 }
