--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <title>Only God Forgives</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic,400italic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="styles/normalize.css">
 <link rel="stylesheet" href="styles/style.css">
